[package]
name = "meow-changer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
hound = "3.5"
rand = "0.8"
cpal = "0.15"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
